force-app/main/default/objects/npe5__Affiliation__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Text formula field created so the Contact Name can appear in related lists in Lightning Experience and Salesforce1</description>
    <formula>npe5__Contact__r.FirstName &amp; &quot; &quot; &amp; npe5__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-created based on Contact First &amp; Last Name</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>