force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Primary__c.field-meta.xml
<CustomField>
    <fullName>npe5__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si se selecciona, la cuenta en la afiliación se guardará en el contacto.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>