force-app/main/default/objects/npe5__Affiliation__c/fields/npsp__Related_Opportunity_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
    <description>When you create an Opportunity for the Organization in this Affiliation, NPSP assigns this Opportunity Contact Role to the affiliated Contact.</description>
    <inlineHelpText>Cuando crea una oportunidad para la organización en esta afiliación, NPSP asigna esta función de contacto de oportunidad al contacto afiliado.</inlineHelpText>
    <label>Related Opportunity Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>